--- a/src/PixelMan.css
+++ b/src/PixelMan.css
@@ -8,7 +8,7 @@
     align-items: center;
 }
 
-.buttonStartGame{
+/* .buttonStartGame{
     width: 13vw;
     height: 3vw;
     background-color: rgb(2, 255, 255);
@@ -18,14 +18,54 @@
     outline: none;
     cursor: pointer;
     text-align: center;
+} */
+
+.eightbit-btn {
+    background: #92cd41;
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    font-size: 30px;
+    padding: 20px;
+    font-family: 'Press Start 2P', cursive;
+    text-decoration: none;
+    color: white;
+    box-shadow: inset -4px -4px 0px 0px #4aa52e;
 }
 
+.eightbit-btn:hover, .eightbit-btn:focus {
+    background: #76c442;
+    box-shadow: inset -6px -6px 0px 0px #4aa52e;
+}
 
-.buttonStartGame:active{
+.eightbit-btn:active {
+    box-shadow: inset 4px 4px 0px 0px #4aa52e;
+}
+.eightbit-btn:before, .eightbit-btn:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    box-sizing: content-box;
+}
+.eightbit-btn:before {
+    top: -6px;
+    left: 0;
+    border-top: 6px black solid;
+    border-bottom: 6px black solid;
+}
+.eightbit-btn:after {
+    left: -6px;
+    top: 0;
+    border-left: 6px black solid;
+    border-right: 6px black solid;
+}
+
+/* .buttonStartGame:active{
     transform: translateY(3px);
     box-shadow: 0 5px rgba(0,0,0,0.8);
 
-}
+} */
 .buttonName{
     display: block;
     font-size: 2vw;
