--- a/src/GameInit.css
+++ b/src/GameInit.css
@@ -1,5 +1,8 @@
 canvas {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: #000000;
   
   }
