--- a/src/PixelMan.css
+++ b/src/PixelMan.css
@@ -1,14 +1,12 @@
 .mainContainer{
-    width:100vw;
-    height:100vh;
-   
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  height:100%;
+  width:100%;
 }
 
-
+.start-game_buttonLocation{
+    top: 45vh;
+    left: 45vw;
+}
 .eightbit-btn {
     background: #92cd41;
     display: inline-block;
