--- a/src/GameInit.css
+++ b/src/GameInit.css
@@ -4,5 +4,6 @@ canvas {
     justify-content: center;
     align-items: center;
     background-color: #000000;
-  
+    margin: 16% auto;
+    border: 2px solid black
   }
